[package]
name = "ssh-list"
description = "SSH connection manager with a TUI interface"
version = "1.4.0"
authors = ["akinoiro"]
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/akinoiro/ssh-list"
categories = [
    "command-line-utilities",
    "development-tools"
]
keywords = ["tui", "ssh"]
readme = "README.md"
exclude = [".github/"]

[dependencies]
crossterm = "0.29.0"
glob = "0.3.3"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.3.0"
tui-input = "0.14.0"

[build-dependencies]
winres = "0.1"
